fix button align css

--- a/excuse-maker-cra/src/App.css
+++ b/excuse-maker-cra/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Gugi&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Gugi&display=swap");
 
 .App {
   text-align: center;
@@ -44,26 +44,32 @@ body {
   padding: 0;
 }
 
-ul,li{
-  margin:0;
-  padding:0;
+ul,
+li {
+  margin: 0;
+  padding: 0;
   text-decoration: none;
   list-style: none;
 }
 
-.alignCenter{
+.alignCenter {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.alignSpaceAround{
+.alignSpaceAround {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-    
 }
 
-.textAlignCenter{
+.alignRowCenter {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.textAlignCenter {
   text-align: center;
 }
